--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -25,3 +25,14 @@ yarn-error.log*
 
 src/config.json
 
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
